updates release notes to update component

--- a/pipelines/release-notes.mdx
+++ b/pipelines/release-notes.mdx
@@ -5,62 +5,53 @@ sidebarTitle: Release notes
 ---
 {/* -- dri: Alexa Kreizinger -- */}
 
-
 Information for each release is listed by component.
 
-## Version 2.65.0
-
-Released 2025.11.19
+<Update label="Version 2.65.0" description="Released 2025.11.19">
 
 ### Pipeline infrastructure [#infra-v2-65-0]
 
 - Various performance improvements.
 - _Fix_: Fixed an issue where invalid fleet configuration files could cause
   unexpected behavior.
+</Update>
 
-## Version 2.64.0
-
-Released 2025.11.12
+<Update label="Version 2.64.0" description="Released 2025.11.12">
 
 ### Pipeline infrastructure [#infra-v2-64-0]
 
 - Various performance improvements.
+</Update>
 
-## Version 2.63.0
-
-Released 2025.11.03
+<Update label="Version 2.63.0" description="Released 2025.11.03">
 
 ### Pipeline infrastructure [#infra-v2-63-0]
 
 - Various performance improvements.
+</Update>
 
-## Version 2.62.0
-
-Released 2025.10.28
+<Update label="Version 2.62.0" description="Released 2025.10.28">
 
 ### Pipeline infrastructure [#infra-v2-62-0]
 
 - Various performance improvements.
+</Update>
 
-## Version 2.61.0
-
-Released 2025.10.14
+<Update label="Version 2.61.0" description="Released 2025.10.14">
 
 ### Pipeline infrastructure [#infra-v2-61-0]
 
 - Various performance improvements.
+</Update>
 
-## Version 2.60.0
-
-Released 2025.10.07
+<Update label="Version 2.60.0" description="Released 2025.10.07">
 
 ### Pipeline infrastructure [#infra-v2-60-0]
 
 - Various performance improvements.
+</Update>
 
-## Version 2.59.0
-
-Released 2025.09.30
+<Update label="Version 2.59.0" description="Released 2025.09.30">
 
 ### Web interface [#ui-v2-59-0]
 
@@ -69,18 +60,16 @@ Released 2025.09.30
 - Improved and standardized the workflow for adding new agents to a fleet.
 - _Fix_: Fixed an issue where API keys were missing from the instructions for
   adding new agents to a fleet.
+</Update>
 
-## Version 2.58.0
-
-Released 2025.09.23
+<Update label="Version 2.58.0" description="Released 2025.09.23">
 
 ### Pipeline agent [#agent-v2-58-0]
 
 - Various performance improvements.
+</Update>
 
-## Version 2.57.0
-
-Released 2025.09.16
+<Update label="Version 2.57.0" description="Released 2025.09.16">
 
 ### Web interface [#ui-v2-57-0]
 
@@ -95,36 +84,32 @@ Released 2025.09.16
 ### Pipeline infrastructure [#infra-v2-57-0]
 
 - Added more descriptive error messages to Pipeline CLI.
+</Update>
 
-## Version 2.56.0
-
-Released 2025.09.10
+<Update label="Version 2.56.0" description="Released 2025.09.10">
 
 ### Pipeline infrastructure [#infra-v2-56-0]
 
 - _Fix_: Fixed an issue where invalid pipeline configuration files could cause
   of unexpectedly high severity.
+</Update>
 
-## Version 2.55.0
-
-Released 2025.09.02
+<Update label="Version 2.55.0" description="Released 2025.09.02">
 
 ### Pipeline agent [#agent-v2-55-0]
 
 - Removed unnecessary configuration parameters from the S3 Input (SQS) source plugin.
 - Various performance improvements.
+</Update>
 
-## Version 2.54.0
-
-Released 2025.08.26
+<Update label="Version 2.54.0" description="Released 2025.08.26">
 
 ### Pipeline agent [#agent-v2-54-0]
 
 - Various performance improvements.
+</Update>
 
-## Version 2.53.0
-
-Released 2025.08.19
+<Update label="Version 2.53.0" description="Released 2025.08.19">
 
 ### Pipeline agent [#agent-v2-53-0]
 
@@ -150,18 +135,16 @@ Released 2025.08.19
   processors are active but not included in the pipeline visualization.
 - _Fix_: Fixed an issue that could cause unexpected errors when previewing output
   in the processing rules playground.
+</Update>
 
-## Version 2.52.0
-
-Released 2025.08.12
+<Update label="Version 2.52.0" description="Released 2025.08.12">
 
 ### Pipeline infrastructure [#infra-v2-52-0]
 
 - Various performance and stability improvements.
+</Update>
 
-## Version 2.51.0
-
-Released 2025.08.05
+<Update label="Version 2.51.0" description="Released 2025.08.05">
 
 ### Pipeline infrastructure [#infra-v2-51-0]
 
@@ -179,10 +162,9 @@ Released 2025.08.05
 
 - _Fix_: Fixed an issue where the pipeline builder removed valid but
   non-standard processors from pipeline configuration files.
+</Update>
 
-## Version 2.50.0
-
-Released 2025.07.29
+<Update label="Version 2.50.0" description="Released 2025.07.29">
 
 ### Pipeline infrastructure [#infra-v2-50-0]
 
@@ -192,19 +174,17 @@ Released 2025.07.29
 
 - _Fix_: Fixed an issue that caused errors when attempting to preview the output
   of processing rules in the Telemetry Pipeline web interface.
+</Update>
 
-## Version 2.49.0
-
-Released 2025.07.22
+<Update label="Version 2.49.0" description="Released 2025.07.22">
 
 ### Web interface [#ui-v2-49-0]
 
 - _Fix_: Fixed an issue that prevented StatefulSet and DaemonSet pipelines from
   appearing in the Telemetry Pipeline web interface.
+</Update>
 
-## Version 2.48.0
-
-Released 2025.07.15
+<Update label="Version 2.48.0" description="Released 2025.07.15">
 
 ### Pipeline infrastructure [#infra-v2-48-0]
 
@@ -218,45 +198,40 @@ Released 2025.07.15
 
 - Added the ability to specify the [workload type](/pipeline-configure/kubernetes/workloads)
   for new pipelines in the Telemetry Pipeline web interface.
+</Update>
 
-## Version 2.47.0
-
-Released 2025.07.08
+<Update label="Version 2.47.0" description="Released 2025.07.08">
 
 ### Web interface [#ui-v2-47-0]
 
 - _Fix_: Various security and stability improvements.
+</Update>
 
-## Version 2.46.0
-
-Released 2025.07.01
+<Update label="Version 2.46.0" description="Released 2025.07.01">
 
 ### Web interface [#ui-v2-46-0]
 
 - _Fix_: Various performance improvements.
+</Update>
 
-## Version 2.45.0
-
-Released 2025.06.24
+<Update label="Version 2.45.0" description="Released 2025.06.24">
 
 ### Pipeline agent [#agent-v2-45-0]
 
 - Added the ability to create pipelines with the StatefulSet
   [deployment strategy](/pipeline-configure/deployment-strategies).
 - _Fix_: Various security and stability improvements.
+</Update>
 
-## Version 2.43.1
-
-Released 2025.06.18
+<Update label="Version 2.43.1" description="Released 2025.06.18">
 
 ### Web interface [#ui-v2-43-1]
 
 - _Fix_: Fixed an issue where certain pipeline deployment strategies caused
   errors in the web interface.
+</Update>
 
-## Version 2.44.0
-
-Released 2025.06.11
+<Update label="Version 2.44.0" description="Released 2025.06.11">
 
 ### Web interface [#ui-v2-44-0]
 
@@ -265,35 +240,31 @@ Released 2025.06.11
 - Various security improvements.
 - _Fix_: Fixed an issue that caused disjointed connections between certain
   source and destination plugins in the pipeline builder.
+</Update>
 
-## Version 2.42.0
-
-Released 2025.06.03
+<Update label="Version 2.42.0" description="Released 2025.06.03">
 
 ### Pipeline agent [#agent-v2-42-0]
 
 - Various stability improvements.
+</Update>
 
-## Version 2.41.0
-
-Released 2025.05.27
+<Update label="Version 2.41.0" description="Released 2025.05.27">
 
 ### Pipeline agent [#agent-v2-41-0]
 
 - _Fix:_ Fixed an issue where invalid configuration parameter values could cause
   pipelines to crash.
+</Update>
 
-## Version 2.40.0
-
-Released 2025.05.20
+<Update label="Version 2.40.0" description="Released 2025.05.20">
 
 ### Web interface [#ui-v2-40-0]
 
 - Various security improvements.
+</Update>
 
-## Version 2.39.0
-
-Released 2025.05.13
+<Update label="Version 2.39.0" description="Released 2025.05.13">
 
 ### Pipeline agent [#agent-v2-39-0]
 
@@ -303,20 +274,18 @@ Released 2025.05.13
 
 - Updated the default values for several parameters in the
   [Chronosphere Logs destination plugin](/pipeline-data/plugins/destination-plugins/chronosphere).
+</Update>
 
-## Version 2.38.0
-
-Released 2025.05.06
+<Update label="Version 2.38.0" description="Released 2025.05.06">
 
 ### Web interface [#ui-v2-38-0]
 
 - Improved the look and feel of the preview input pane and preview output pane in
   the processing rules builder.
 - _Fix_: Fixed an issue with incorrectly labeled pipeline settings.
+</Update>
 
-## Version 2.37.0
-
-Released 2025.04.30
+<Update label="Version 2.37.0" description="Released 2025.04.30">
 
 ### Web interface [#ui-v2-37-0]
 
@@ -326,20 +295,18 @@ Released 2025.04.30
 ### Pipeline infrastructure [#infra-v2-37-0]
 
 - Various bug fixes and performance improvements.
+</Update>
 
-## Version 2.36.0
-
-Released 2025.04.22
+<Update label="Version 2.36.0" description="Released 2025.04.22">
 
 ### Core Operator [#operator-v2-36-0]
 
 - _Fix_: Fixed an issue that impacted Secret names.
 - _Fix_: Uninstalling a Core Operator no longer deletes the namespace where that
   Core Operator was installed.
+</Update>
 
-## Version 2.35.0
-
-Released 2025.04.15
+<Update label="Version 2.35.0" description="Released 2025.04.15">
 
 ### Web interface [#ui-v2-35-0]
 
@@ -350,10 +317,9 @@ Released 2025.04.15
 ### Pipeline infrastructure [#infra-v2-35-0]
 
 - Various bug fixes and performance improvements.
+</Update>
 
-## Version 2.34.0
-
-Released 2025.04.08
+<Update label="Version 2.34.0" description="Released 2025.04.08">
 
 ### Pipeline agent [#agent-v2-34-0]
 
@@ -376,18 +342,16 @@ Released 2025.04.08
   [Google Chronicle](/pipeline-data/plugins/destination-plugins/google-chronicle)
   destination plugin.
 - Various improvements.
+</Update>
 
-## Version 2.33.0
-
-Released 2025.04.02
+<Update label="Version 2.33.0" description="Released 2025.04.02">
 
 ### Pipeline infrastructure [#infra-v2-33-0]
 
 - _Fix_: Various bug fixes and performance improvements.
+</Update>
 
-## Version 2.32.0
-
-Released 2025.03.25
+<Update label="Version 2.32.0" description="Released 2025.03.25">
 
 ### Pipeline CLI [#cli-v2-32-0]
 
@@ -403,18 +367,16 @@ Released 2025.03.25
 - _Fix_: Fixed an issue where empty arrays in pipeline configuration files could
   cause the Telemetry Pipeline web interface to crash.
 - _Fix_: Fixed an issue related to creating new projects.
+</Update>
 
-## Version 2.31.0
-
-Released 2025.03.18
+<Update label="Version 2.31.0" description="Released 2025.03.18">
 
 ### Pipeline infrastructure [#infra-v2-31-0]
 
 - _Fix_: Various bug fixes and performance improvements.
+</Update>
 
-## Version 2.30.0
-
-Released 2025.03.11
+<Update label="Version 2.30.0" description="Released 2025.03.11">
 
 ### Web interface [#ui-v2-30-0]
 
@@ -422,20 +384,18 @@ Released 2025.03.11
   [automated Kubernetes logging](/pipeline-data/automated-logging).
 - _Fix_: Fixed an unexpected behavior with OAuth2 parameters for the HTTP API
   source plugin.
+</Update>
 
-## Version 2.29.1
-
-Released 2025.02.25
+<Update label="Version 2.29.1" description="Released 2025.02.25">
 
 ### Web interface [#ui-v2-29-1]
 
 - Added a warning about Fluent Bit version compatibility to the fleet configuration editor.
 - _Fix_: Fixed an issue that affected configuration parameters for the Loki destination plugin.
 - _Fix_: Fixed an issue that could cause the Monitoring page to crash.
+</Update>
 
-## Version 2.28.0
-
-Released 2025.02.13
+<Update label="Version 2.28.0" description="Released 2025.02.13">
 
 ### Web interface [#ui-v2-28-0]
 
@@ -445,10 +405,9 @@ Released 2025.02.13
 ### Pipeline infrastructure [#infra-v2-28-0]
 
 - _Fix_: Various bug fixes and performance improvements.
+</Update>
 
-## Version 2.27.0
-
-Released 2025.02.04
+<Update label="Version 2.27.0" description="Released 2025.02.04">
 
 ### Web interface [#ui-v2-27-0]
 
@@ -458,10 +417,9 @@ Released 2025.02.04
 ### Pipeline agent [#agent-v2-27-0]
 
 - _Fix_: Various bug fixes.
+</Update>
 
-## Version 2.26.0
-
-Released 2025.01.28
+<Update label="Version 2.26.0" description="Released 2025.01.28">
 
 ### Web interface [#ui-v2-26-0]
 
@@ -471,10 +429,9 @@ Released 2025.01.28
 ### Pipeline infrastructure [#infra-v2-26-0]
 
 - Various improvements to fleet performance.
+</Update>
 
-## Version 2.25.0
-
-Released 2025.01.21
+<Update label="Version 2.25.0" description="Released 2025.01.21">
 
 ### Web interface [#ui-v2-25-0]
 
@@ -499,19 +456,17 @@ Released 2025.01.21
 
 - Added support for conditional operators.
 - _Fix_: Fixed an issue that affected the OpenTelemetry input and output plugins.
+</Update>
 
-## Version 2.24.0
-
-Released 2025.01.14
+<Update label="Version 2.24.0" description="Released 2025.01.14">
 
 ### Web interface [#ui-v2-24-0]
 
 - Updated the Telemetry Pipeline web interface to use Chronosphere styles and branding.
 - _Fix_: Various bug fixes.
+</Update>
 
-## Version 2.23.0
-
-Released 2025.01.06
+<Update label="Version 2.23.0" description="Released 2025.01.06">
 
 ### Web interface [#ui-v2-23-0]
 
@@ -529,10 +484,9 @@ Released 2025.01.06
 - Added support for [backing up](/pipeline-configure/metadata#back-up-pipeline-configuration-files)
   multiple pipeline configuration files simultaneously.
 - _Fix_: Fixed an issue that affected pipeline deployment strategies.
+</Update>
 
-## Version 2.22.0
-
-Released 2024.12.12
+<Update label="Version 2.22.0" description="Released 2024.12.12">
 
 ### Web interface [#ui-v2-22-0]
 
@@ -560,10 +514,9 @@ Released 2024.12.12
 - Various improvements to Core Operator behavior.
 - _Fix_: Improved the syntax for referencing pipeline files and secrets to make its
   behavior more consistent.
+</Update>
 
-## Version 2.21.0
-
-Released 2024.12.05
+<Update label="Version 2.21.0" description="Released 2024.12.05">
 
 ### Web interface [#ui-v2-21-0]
 
@@ -580,10 +533,9 @@ Released 2024.12.05
 - _Fix_: Editing an agent in a fleet now displays the correct type for that agent.
 - _Fix_: Fixed an issue that prevented pipeline names from including a number
   as its final character.
+</Update>
 
-## Version 2.20.0
-
-Released: 2024.11.12
+<Update label="Version 2.20.0" description="Released: 2024.11.12">
 
 ### Web interface [#ui-v2-20-0]
 
@@ -592,10 +544,9 @@ Released: 2024.11.12
 ### Pipeline agent [#agent-v2-20-0]
 
 - _Fix_: Reduced the memory usage of the block records processing rule.
+</Update>
 
-## Version 2.19.0
-
-Released: 2024.11.05
+<Update label="Version 2.19.0" description="Released: 2024.11.05">
 
 ### Web interface [#ui-v2-19-0]
 
@@ -608,10 +559,9 @@ Released: 2024.11.05
 
 - Added a host path volume to DaemonSet pipelines.
 - Added tolerations to the Core Operator chart.
+</Update>
 
-## Version 2.18.0
-
-Released: 2024.10.30
+<Update label="Version 2.18.0" description="Released: 2024.10.30">
 
 ### Web interface [#ui-v2-18-0]
 
@@ -635,10 +585,9 @@ Released: 2024.10.30
 
 - _Fix_: Fixed an issue that overwrote the standard label names provided by Kubernetes
   templates.
+</Update>
 
-## Version 2.17.0
-
-Released: 2024.10.21
+<Update label="Version 2.17.0" description="Released: 2024.10.21">
 
 ### Web interface [#ui-v2-17-0]
 
@@ -657,10 +606,9 @@ Released: 2024.10.21
 
 - Added the [Cloudflare source plugin](/pipeline-data/plugins/source-plugins/cloudflare).
 - _Fix_: Fixed an issue that caused 404 errors from the OpenTelemetry destination plugin.
+</Update>
 
-## Version 2.16.0
-
-Released: 2024.10.08
+<Update label="Version 2.16.0" description="Released: 2024.10.08">
 
 ### Web interface [#ui-v2-16-0]
 
@@ -718,10 +666,9 @@ Released: 2024.10.08
 ### Core Operator [#core-operator-v2-16-0]
 
 - _Fix_: Validate pipeline names to ensure they don't exceed 27 characters.
+</Update>
 
-## Version 2.15.0
-
-Released: 2024.09.24
+<Update label="Version 2.15.0" description="Released: 2024.09.24">
 
 ### Web interface [#ui-v2-15-0]
 
@@ -757,10 +704,9 @@ Released: 2024.09.24
 - _Fix_: Setting a region in the Amazon S3 SQS plugin now sets the corresponding endpoint
    automatically.
 - _Fix_: The aggregate records processing rule now handles unsigned integers correctly.
+</Update>
 
-## Version 2.14.0
-
-_Also known as Chronosphere Telemetry Pipeline v2.14.0._
+<Update label="Version 2.14.0" description="_Also known as Chronosphere Telemetry Pipeline v2.14.0._">
 
 Released: 2024.09.11
 
@@ -834,10 +780,9 @@ Released: 2024.09.11
 
 - Added support for proxies.
 - Improved image version replacement logic for Helm charts.
+</Update>
 
-## Version 2.13.0
-
-_Also known as Chronosphere Telemetry Pipeline v2.13.0._
+<Update label="Version 2.13.0" description="_Also known as Chronosphere Telemetry Pipeline v2.13.0._">
 
 Released: 2024.06.12
 
@@ -882,19 +827,17 @@ Released: 2024.06.12
 - _Fix_: Changed the way that Core Instance assigns names to pipelines. The previous
   naming schema was `[pipeline_name]-[random_4_char_string]`, and the new naming
   schema is `[core-instance-name]-[pipeline_name]`
+</Update>
 
-## Version 2.12.3
-
-Released: 2024.05.21
+<Update label="Version 2.12.3" description="Released: 2024.05.21">
 
 ### Pipeline agent [#pipeline-agent-v2-12-3]
 
 - _Fix_: Fixed a potential security issue (Fluent Bit CVE-2024-4323) related to input
   requests.
+</Update>
 
-## Version 2.12.0
-
-Released: 2024.05.15
+<Update label="Version 2.12.0" description="Released: 2024.05.15">
 
 ### Web interface [#ui-v2-12-0]
 
@@ -971,3 +914,4 @@ Released: 2024.05.15
   support regular expressions.
 - Updated the "parse" processing rule to support extended regular expression syntax.
 - Added the "join" processing rule.
+</Update>
