--- a/pipelines/security.mdx
+++ b/pipelines/security.mdx
@@ -29,7 +29,7 @@ signature is valid.
 
 Use the following GPG key to verify Telemetry Pipeline software packages:
 
-```shell
+```shell expandable
 -----BEGIN PGP PUBLIC KEY BLOCK-----
 
 mQINBGI8PcIBEADZ0fizLscKGjhrg0tC5IZUTasN3uJIqNtAIRl48Zr26UYPsnjE
